--- a/app_blog/templates/app_blog/inicio.html
+++ b/app_blog/templates/app_blog/inicio.html
@@ -11,7 +11,7 @@
                     <div class="col-md-12" style="color:#033B8D">
                         <h2>{{blog.titulo}}</h2>  
                     </div>
-                    <div class="col-md-12" style="color:#ffffff">
+                    <div class="col-md-12" style="color:#111010">
                         <p>{{blog.subtitulo}}</p>
                         {% if blog.imagen %}
                             <img src = "{{blog.imagen.url}}">
