--- a/app_blog/templates/app_blog/base.html
+++ b/app_blog/templates/app_blog/base.html
@@ -50,6 +50,22 @@ html {
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'comentario' %}">Comentarios</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login2' %}">Login</a>
+                    </li>
+                    {% if user.is_authenticated %}
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                      {{ user.username }}
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                      <li><a class="dropdown-item" href="{% url 'logout' %}"><strong>Cerrar Sesión</strong></a></li>
+                    </ul>
+                  </div>
+                {% else %}
+                <a class="nav-link" href="{% url 'register' %}">Registrate</a>
+                {% endif %}
+            </div>
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
