--- a/app_blog/templates/app_blog/comentarios.html
+++ b/app_blog/templates/app_blog/comentarios.html
@@ -29,7 +29,7 @@
             <td>{{comentario.comentario}}</td>
             <td>{{comentario.id_usuario}}</td>
             <td>{{comentario.post_id}}</td>
-            <td><a href="{% url 'editar_comentario' comentario.id %}" class="btn btn-outline-light">Editar</a></td>
+            <td><a href="{% url 'editar_comentario' comentario.id %}" class="btn btn-outline-warning">Editar</a></td>
             <td><a href="{% url 'eliminar_comentario' comentario.id %}" class="btn btn-outline-danger" onclick="return confirm('¿Esta seguro que desea eliminar el siguiente comentario?: Id {{comentario.id}} | post: {{comentario.post_id}}');">Eliminar</a></td>
         </tr>
         {% endfor %}
