--- a/app_blog/templates/app_blog/posts.html
+++ b/app_blog/templates/app_blog/posts.html
@@ -41,7 +41,7 @@
             <td>{{post.autor}}</td>
             <td>{{usuario.fecha_creacion}}</td>
             <td>{{post.usuario_id}}</td>
-            <td><a href="{% url 'editar_post' post.id %}" class="btn btn-outline-light">Editar</a></td>
+            <td><a href="{% url 'editar_post' post.id %}" class="btn btn-outline-warning">Editar</a></td>
             <td><a href="{% url 'eliminar_post' post.id %}" class="btn btn-outline-danger" onclick="return confirm('¿Esta seguro que desea eliminar el siguiente post?: {{post.titulo}}');">Eliminar</a></td>
         </tr>
         {% endfor %}
