--- a/app_blog/templates/app_blog/about.html
+++ b/app_blog/templates/app_blog/about.html
@@ -7,8 +7,20 @@
         <h2>About us</h2><br />
     </div>
     <div style='text-align:justify'>
-        <p><b>Perla Jara</b>:
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse ut metus. Proin venenatis turpis sit amet ante consequat semper. Aenean nunc. Duis iaculis odio id lectus. Integer dapibus justo vitae elit. Nunc luctus, tortor quis iaculis tempus, urna odio iaculis erat, imperdiet lobortis orci lectus at eros. Ut a velit id odio malesuada nonummy. Aenean cursus metus a purus. Duis dapibus odio a enim. Aliquam ut diam sed nisl imperdiet gravida. Proin eget tellus ut ante dignissim dictum. Integer ut justo quis eros feugiat convallis. Praesent massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla egestas, nibh at malesuada nonummy, mi augue condimentum velit, a facilisis tortor ipsum non diam.
+        <p><b>Perla Jara</b>
+            <br><br>
+            Mi nombre es Perla Jara, tengo 25 años y soy de Santiago de Chile. Realicé mi educación básica y media 
+            en el liceo Centro Politécnico Particular de Conchalí, del cual salí el año 2014 con un título de Contadora 
+            Técnico de Nivel Medio. El año siguiente realicé mi práctica profesional pero fue una de las peores 
+            experiencias que he tenido, por lo que decidí no seguir por ese camino. El año 2018 decidí entrar a la 
+            universidad a estudiar Analista Programador Computacional y en 2020 convalidé para Ingeniería en 
+            Informática, el cual realicé en casa debido a la pandemia. El año pasado terminé mis estudios y 
+            actualmente me encuentro teletrabajando para una consultora. 
+            <br><br>
+            Me gusta pasar tiempo con mi familia y nuestros dos gatos, subir cerros con mis hermanos (soy la menor 
+            de tres), escuchar música y leer.
+
+
         </p>
         <br />
         <br />
