agregando puntos faltantes

--- a/app_blog/templates/app_blog/buscar_usuario.html
+++ b/app_blog/templates/app_blog/buscar_usuario.html
@@ -2,14 +2,8 @@
 
 {% block changing_content %}
     <div class="row">
-        <div class="row justify-content-end">
-            <div class="col-4 text-center">
-                <a class="btn btn-outline-success" href="{% url 'usuario' %}" role="button">Regresar</a>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-4 offset-md-4">
+        <div class="col-md-4 offset-md-4" style="margin-top: 10%;">
+            <a class="btn btn-outline-success" style="float: right;" href="{% url 'usuario' %}" role="button">Regresar</a>
             <div class="text-center pt-5">
                 <h1>Busqueda de usuarios</h1>
             </div>
