--- a/app_blog/templates/app_blog/crear_usuario.html
+++ b/app_blog/templates/app_blog/crear_usuario.html
@@ -2,14 +2,11 @@
 {% load static %}
 
 {% block changing_content %}
+
     <div class="row">
-        <div class="row justify-content-end">
-            <div class="col-4 text-center">
-                <a class="btn btn-outline-success" href="{% url 'home' %}" role="button">Regresar</a>
-            </div>
+        <div style="text-align: right;">
+            <a href="{% url 'usuario' %}" style="text-decoration: none;">Back</a>
         </div>
-    </div>
-    <div class="row">
         <div class="col-md-4 offset-md-4">
             <div class="text-center pt-5">
                 <h1> Crear usuario</h1>
