--- a/app_blog/templates/app_blog/inicio.html
+++ b/app_blog/templates/app_blog/inicio.html
@@ -2,47 +2,54 @@
 
 {% block changing_content %}
 
-<div class="row" style="margin-bottom: 5%; height: 100%;">
+<div class="row" style="padding-top: 25px; padding-bottom: 10%;">
     <div class="col-md-8 offset-md-2">
-        {% for blog in blogs %}
-        <div class="row" style="border-bottom: 1px solid black; padding: 20px; margin: 20px auto 0 auto;">
-            <div class="col-md-8">
-                <div class="row">
-                    <div class="col-md-12" style="color:#033B8D">
-                        <h2>{{blog.titulo}}</h2>  
-                    </div>
-                    <div class="col-md-12" style="color:#111010">
-                        <p>{{blog.subtitulo}}</p>
-                        {% if blog.imagen %}
-                            <img src = "{{blog.imagen.url}}">
-                        {% endif %}    
-                    </div>
-                    <div class="col-md-12" style="width: 250px;
-                    margin: 0 0 1em 0;
-                    overflow: hidden;
-                    display: -webkit-box;
-                    -webkit-line-clamp: 4;
-                    -webkit-box-orient: vertical;">
-                        <p>{{blog.contenido}}</p>
-                    </div>
-                    <div class="col-md-12" style="font-size: 10pt;">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <span>{{blog.fecha_creacion}}</span>
+        {% if total == 0 %}
+            <div style="text-align: center; padding-top:40%">
+                <h1>No hay entradas aun</h1>
+            </div>
+        {% else %}
+            {% for blog in blogs %}
+            <div class="row" style="border-bottom: 1px solid black; padding: 20px; margin: 20px auto 0 auto;">
+                <div class="col-md-8">
+                    <div class="row">
+                        <div class="col-md-12" style="color:#033B8D">
+                            <h2>{{blog.titulo}}</h2>
+                        </div>
+                        <div class="col-md-12" style="color:#111010">
+                            <p>{{blog.subtitulo}}</p>
+                            {% if blog.imagen %}
+                                <img width="800" height="450" src = "{{blog.imagen.url}}">
+                            {% endif %}
+                        </div>
+                        <div class="col-md-12" style="width: 250px;
+                        margin: 0 0 1em 0;
+                        overflow: hidden;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 4;
+                        -webkit-box-orient: vertical;">
+                            <p>{{blog.contenido}}</p>
+                        </div>
+                        <div class="col-md-12" style="font-size: 10pt;">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <span>{{blog.fecha_creacion}}</span>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md-12">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <button type="button" class="btn btn-outline-primary">Read more</button>
+                        <div class="col-md-12">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <!-- <button type="button" href="{% url 'pages' blog.id%}" class="btn btn-outline-primary"></button> -->
+                                    <a class="btn btn-primary" role="button" href="{% url 'pages' blog.id%}">Read more</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        {% endfor %}
+            {% endfor %}
+        {% endif %}
     </div>
 </div>
 
