--- a/app_blog/templates/app_blog/about.html
+++ b/app_blog/templates/app_blog/about.html
@@ -2,31 +2,66 @@
 
 {% block changing_content %}
 
-<div class="row" style="margin-top: 10%; text-align:center;">
-    <div class="col-md-4 offset-md-4" style="margin-bottom: 15px;">
+<div class="row" style="margin-top: 5%; margin-bottom: 10%;">
+    <div class="col-md-4 offset-md-4" style="margin-bottom: 15px; text-align:center;">
         <h2>About us</h2><br />
     </div>
     <div style='text-align:justify'>
-        <p><b>Perla Jara</b>
-            <br><br>
-            Mi nombre es Perla Jara, tengo 25 años y soy de Santiago de Chile. Realicé mi educación básica y media 
-            en el liceo Centro Politécnico Particular de Conchalí, del cual salí el año 2014 con un título de Contadora 
-            Técnico de Nivel Medio. El año siguiente realicé mi práctica profesional pero fue una de las peores 
-            experiencias que he tenido, por lo que decidí no seguir por ese camino. El año 2018 decidí entrar a la 
-            universidad a estudiar Analista Programador Computacional y en 2020 convalidé para Ingeniería en 
-            Informática, el cual realicé en casa debido a la pandemia. El año pasado terminé mis estudios y 
-            actualmente me encuentro teletrabajando para una consultora. 
-            <br><br>
-            Me gusta pasar tiempo con mi familia y nuestros dos gatos, subir cerros con mis hermanos (soy la menor 
-            de tres), escuchar música y leer.
-
-
-        </p>
-        <br />
-        <br />
-        <p><b>Roberto Ramírez</b>:
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse ut metus. Proin venenatis turpis sit amet ante consequat semper. Aenean nunc. Duis iaculis odio id lectus. Integer dapibus justo vitae elit. Nunc luctus, tortor quis iaculis tempus, urna odio iaculis erat, imperdiet lobortis orci lectus at eros. Ut a velit id odio malesuada nonummy. Aenean cursus metus a purus. Duis dapibus odio a enim. Aliquam ut diam sed nisl imperdiet gravida. Proin eget tellus ut ante dignissim dictum. Integer ut justo quis eros feugiat convallis. Praesent massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla egestas, nibh at malesuada nonummy, mi augue condimentum velit, a facilisis tortor ipsum non diam.
-        </p>
+        <div class="row" style="padding-bottom: 45px;">
+            <div class="col-md-4" style="text-align: center;">
+                <img src="" alt="" width="280" height="290">
+            </div>
+            <div class="col-md-8">
+                <p><b>Perla Jara</b>
+                    <br><br>
+                    Mi nombre es Perla Jara, tengo 25 años y soy de Santiago de Chile. Realicé mi educación básica y media
+                    en el liceo Centro Politécnico Particular de Conchalí, del cual salí el año 2014 con un título de Contadora
+                    Técnico de Nivel Medio. El año siguiente realicé mi práctica profesional pero fue una de las peores
+                    experiencias que he tenido, por lo que decidí no seguir por ese camino. El año 2018 decidí entrar a la
+                    universidad a estudiar Analista Programador Computacional y en 2020 convalidé para Ingeniería en
+                    Informática, el cual realicé en casa debido a la pandemia. El año pasado terminé mis estudios y
+                    actualmente me encuentro teletrabajando para una consultora.
+                    <br><br>
+                    Me gusta pasar tiempo con mi familia y nuestros dos gatos, subir cerros con mis hermanos (soy la menor
+                    de tres), escuchar música y leer.
+                </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4" style="text-align: center;">
+                <img src="/media/posts/roberto.jpg" alt="Roberto photo" width="280" height="290">
+            </div>
+            <div class="col-md-8">
+                <p><b>{{avatar.imagen}}</b>
+                    <p><b>Roberto Ramírez Chávez</b>
+                    <br><br>
+                    Soy Roberto Ramírez, tengo 32 años y soy de la Ciudad de México, México, Soy Ingeniero en Sistemas Computacionales
+                    y actualmente me desempeño como Backend Developer en una agencia de marketing digital aquí en mi país, durante
+                    el tiempo que he estado trabajando he estado en diferentes puestos tales cómo: DBA, SysAdmin, Front Developer, Líder técnico
+                    y Backend Developer, en la actualidad trabajo cómo Python Developer utilizando el micro framework de Flask y también con
+                    tecnologías en la nube cómo AWS y GCP.
+                    <br><br>
+                    En mis tiempos libres me gusta practicar el senderismo jugar squash y frontenis y me gusta practicar la fotografía
+                    de forma amateur.
+                </p>
+            </div>
+        </div>
+        <br/>
+        <div class="row">
+            <div style="text-align: center;">
+                <h2>About project</h2>
+            </div>
+            <div class="col-md-12">
+                <p>Este proyecto es un pequeño desarrollo pensando en el funcionamiento de una plataforma de blog, en el cual se tiene un administrador
+                que podrá visualizar, crear, modificar y eliminar los blogs, así cómo también podrá ver las publicaciones realizadas y poder ver a los
+                usuarios que están registrados en la app, podrá hacer una búsqueda de los mismos y también podrá eliminarlos, por otro lado tenemos a los
+                usuarios que están registrados dentro de la aplicación quienes podrán crear su perfil y también podrá crear, editar y eliminar sus propios
+                blogs, todos los blogs publicados estarán abiertos al púbico en general.</p>
+                <p>Lo que indica que no será necesario crear una cuenta en dentro de la aplicación para poder leer algunos de los blogs creados, esta aplicación
+                está realizada con el framework <b>Django</b> y con el lenguaje de programación Python, para la base de datos se utilizó <b>SQLite</b> y para el diseño a
+                maquetado se utilizó las plantillas que nos proporciona el propio framework junto con la ayuda de <b>HTML</b>, <b>CSS3</b> y <b>Boostrap 5</b>.</p>
+            </div>
+        </div>
     </div>
 </div>
 
