--- a/app_blog/templates/app_blog/base.html
+++ b/app_blog/templates/app_blog/base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 {% block style_block %}
@@ -23,9 +25,9 @@ html {
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>Blog</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'app_blog/assets/terminal_1.ico' %}" />
+    <link href="{% static 'app_blog/css/styles.css' %}" rel="stylesheet" />
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -38,37 +40,40 @@ html {
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'about' %}">About</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'usuario' %}">Usuarios</a>
-                    </li>
+                    {% if user.is_staff == 1 %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'usuario' %}">Users</a>
+                        </li>
+                    {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'post' %}">Posts</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'comentario' %}">Comentarios</a>
-                    </li>
+                </ul>
+            </div>
+            <ul  class="navbar-nav me-auto mb-2 mb-lg-0">
+                {% if user.is_authenticated %}
+                    <div class="btn-group">
+                        {% if user.avatar.imagen.url %}
+                            <img class="btn btn-outline-success dropdown-toggle" style="border-radius: 25px; --bs-btn-padding-y: 0 rem !important;" data-bs-toggle="dropdown" aria-expanded="false" width="45" height="45" src="{{ user.avatar.imagen.url }}">
+                        {% else %}
+                            <img class="btn btn-outline-success dropdown-toggle" style="border-radius: 25px; --bs-btn-padding-y: 0 rem !important;" data-bs-toggle="dropdown" aria-expanded="false" width="45" height="45" src = "/media/avatares/default.png">
+                        {% endif %}
+                        <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="{% url 'editar_perfil' %}"><strong>Mi perfil</strong></a></li>
+                            {% if user.avatar.imagen.url %}
+                                <li><a class="dropdown-item" href="{% url 'editar_avatar' %}"><strong>Editar avatar</strong></a></li>
+                            {% else %}
+                                <li><a class="dropdown-item" href="{% url 'agregar_avatar' %}"><strong>Agregar avatar</strong></a></li>
+                            {% endif %}
+                            <li><a class="dropdown-item" href="{% url 'logout' %}"><strong>Cerrar Sesión</strong></a></li>
+                        </ul>
+                    </div>
+                {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'login' %}">Login</a>
                     </li>
-                    {% if user.is_authenticated %}
-                <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                      {{ user.username }}
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                      <li><a class="dropdown-item" href="{% url 'logout' %}"><strong>Cerrar Sesión</strong></a></li>
-                    </ul>
-                  </div>
-                {% else %}
-                <a class="nav-link" href="{% url 'register' %}">Registrate</a>
                 {% endif %}
-            </div>
-                </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-            </div>
+            </ul>
         </div>
     </nav>
     <div class="container">
