--- a/app_blog/templates/app_blog/crear_post.html
+++ b/app_blog/templates/app_blog/crear_post.html
@@ -2,9 +2,10 @@
 
 {% block changing_content %}
 <div class="row">
-    <div class="col-md-8 offset-md-2">
+    <div class="col-md-8 offset-md-2" style="padding-bottom: 10%; padding-top: 5%;">
+        <a class="btn btn-outline-success" style="float: right;" href="{% url 'post' %}" role="button">Regresar</a>
         <div class="text-center pt-5">
-            <h1> Crear post</h1>
+            <h1>{{ title }}</h1>
         </div>
 
         <form action="" method="POST" enctype="multipart/form-data">
