--- a/app_blog/templates/app_blog/login.html
+++ b/app_blog/templates/app_blog/login.html
@@ -1,9 +1,20 @@
 {% extends 'base.html' %}
 
 {% block changing_content %}
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Iniciar Sesión" />
-  </form>
+<div class="row" style="margin-top: 20%; text-align: center;">
+  <div class="col-md-4 offset-md-4">
+    <form method="post">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <div class="row">
+        <div class="col-md-6">
+          <input type="submit" value="Iniciar Sesión"/>
+        </div>
+        <div class="col-md-6">
+          <a href="{% url 'register' %}">Sign up</a>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
 {% endblock changing_content %}
